--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "plasmo": "0.84.0",
+    "@million/lint": "^0.0.73",
+    "@plasmohq/storage": "^1.9.3",
+    "i": "^0.3.7",
+    "npm": "^10.5.0",
+    "plasmo": "0.85.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.5"
@@ -26,8 +30,19 @@
     "typescript": "5.2.2"
   },
   "manifest": {
+    "permissions": [
+      "webRequest",
+      "webRequestBlocking",
+      "declarativeNetRequest",
+      "declarativeNetRequestFeedback",
+      "storage",
+      "tabs",
+      "activeTab",
+      "alarms"
+    ],
     "host_permissions": [
-      "https://*/*"
+      "https://*/*",
+      "<all_urls>"
     ]
   }
 }
