--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@plasmohq/storage": "^1.9.3",
     "@remixicon/react": "^4.2.0",
     "@upstash/redis": "^1.29.0",
+    "framer-motion": "^11.0.20",
     "i": "^0.3.7",
     "npm": "^10.5.0",
     "plasmo": "0.85.2",
