--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@million/lint": "^0.0.73",
+    "@plasmohq/messaging": "^0.6.2",
     "@plasmohq/storage": "^1.9.3",
     "@remixicon/react": "^4.2.0",
     "@upstash/redis": "^1.29.0",
