--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@plasmohq/messaging": "^0.6.2",
     "@plasmohq/storage": "^1.9.3",
     "@remixicon/react": "^4.2.0",
-    "@upstash/redis": "^1.29.0",
+    "cheerio": "1.0.0-rc.12",
+    "dom-parser": "^1.1.5",
     "framer-motion": "^11.0.20",
-    "i": "^0.3.7",
     "lodash": "^4.17.21",
     "npm": "^10.5.0",
     "plasmo": "0.85.2",
